# ta

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PLANS.md  QUICK_WINS_PR_SUGGESTIONS.md  README.md  VISION.md  makefile  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  (+1 more)
crates/ta-engine/: Cargo.toml  README.md
crates/ta-engine/src/: lib.rs  volatility.rs  volume.rs
crates/ta-engine/src/core/: dataset.rs  metadata.rs  mod.rs
crates/ta-engine/src/core/metadata/: event.rs  mod.rs  momentum.rs  pattern.rs  trend.rs  volatility.rs  volume.rs
crates/ta-engine/src/core/metadata/event/: cross.rs  crossdown.rs  crossup.rs  enter.rs  exit.rs  falling.rs  falling_pct.rs  in_channel.rs  mod.rs  out.rs  rising.rs  rising_pct.rs
crates/ta-engine/src/core/metadata/momentum/: ao.rs  cci.rs  cmo.rs  coppock.rs  mfi.rs  mod.rs  roc.rs  rsi.rs  stochastic.rs  vortex.rs  williams_r.rs
crates/ta-engine/src/core/metadata/pattern/: mod.rs  swing_points.rs
crates/ta-engine/src/core/metadata/trend/: adx.rs  elder_ray.rs  ema.rs  fisher.rs  hma.rs  ichimoku.rs  macd.rs  mod.rs  psar.rs  sma.rs  supertrend.rs  wma.rs
crates/ta-engine/src/core/metadata/volatility/: atr.rs  bbands.rs  donchian.rs  keltner.rs  mod.rs
crates/ta-engine/src/core/metadata/volume/: cmf.rs  klinger_vf.rs  mod.rs  obv.rs  vwap.rs
crates/ta-engine/src/execution/incremental/: backend.rs  graph_exec.rs  mod.rs  payload_parse.rs  state.rs  state_codec.rs
crates/ta-engine/src/incremental/: backend.rs  contracts.rs  kernel_registry.rs
crates/ta-engine/src/indicators/: mod.rs  momentum.rs  moving_averages.rs  rolling.rs
crates/ta-engine/src/runtime/: catalog.rs  compute.rs  contracts.rs  mod.rs  params.rs
crates/ta-engine/tests/: dataset_append_tests.rs  dataset_handle_tests.rs  execute_plan_payload_contract_tests.rs  incremental_contracts_tests.rs  metadata_contract_tests.rs  runtime_catalog_contract_tests.rs  runtime_compute_tests.rs
crates/ta-node/: Cargo.toml  README.md  index.d.ts  package.json
crates/ta-node/src/: lib.rs
crates/ta-node/test/fixtures/: parity_cases.json
crates/ta-node/tests/: parity_fixtures.rs
python/: README.md  pyproject.toml
python/src/laakhay/ta/api/: handle.py  momentum.py  namespace.py  primitives.py  trend.py  utils.py  volatility.py  volume.py
python/src/laakhay/ta/catalog/: catalog.py  rust_catalog.py
python/src/laakhay/ta/expr/: README.md  compile.py
python/src/laakhay/ta/expr/algebra/: operators.py  scalar_helpers.py
python/src/laakhay/ta/expr/dsl/: __init__.py  analyzer.py  parser.py
python/src/laakhay/ta/expr/execution/: __init__.py  backend.py  runner.py
python/src/laakhay/ta/expr/ir/: nodes.py
python/src/laakhay/ta/expr/planner/: __init__.py  evaluator.py  manifest.py  planner.py  types.py
python/src/laakhay/ta/expr/runtime/: analyze.py  capability_validator.py  emission.py  preview.py
python/src/laakhay/ta/expr/semantics/: source_schema.py
python/src/laakhay/ta/expr/typecheck/: checker.py
python/src/laakhay/ta/indicators/: __init__.py  _utils.py
python/src/laakhay/ta/indicators/events/: channel.py
python/src/laakhay/ta/indicators/momentum/: __init__.py  adx.py  ao.py  cmo.py  coppock.py  mfi.py  roc.py  rsi.py  vortex.py
python/src/laakhay/ta/indicators/pattern/: __init__.py  fib.py
python/src/laakhay/ta/indicators/trend/: elder_ray.py  ema.py  hma.py  sma.py
python/src/laakhay/ta/indicators/volatility/: __init__.py  keltner.py
python/src/laakhay/ta/indicators/volume/: __init__.py  obv.py
python/src/laakhay/ta/primitives/: elementwise_ops.py  kernel.py  math_ops.py  rolling_ops.py  select.py
python/src/laakhay/ta/primitives/kernels/: __init__.py  adx.py  klinger.py  math.py  obv.py  rsi.py  supertrend.py  vortex.py
python/src/laakhay/ta/registry/: __init__.py  models.py  registry.py  schemas.py
python/src/laakhay/ta/runtime/: __init__.py  backend.py  contracts.py  dispatch.py
python/tests/: repro_requirements.py
python/tests/e2e/: test_expression_smoke.py
python/tests/integration/: test_api_surface.py  test_canonical_smoke.py  test_engine_functional.py  test_explicit_source_indicators.py  test_expression_aliases_integration.py  test_ffi_smoke.py  test_public_api.py  test_source_selector.py
python/tests/parity/: test_batch_vs_incremental.py  test_dataset_rust_vs_python.py  test_incremental_python_vs_rust.py  test_indicator_metadata_sync.py  test_kernels.py  test_python_vs_rust_differential.py  utils.py
python/tests/performance/: __init__.py  test_evaluation_benchmarks.py  test_pipeline_throughput.py
python/tests/unit/: test_nested_indicator_plotting.py
python/tests/unit/catalog/: test_catalog_coverage.py  test_params.py  test_rust_catalog_contract.py  test_utils.py
python/tests/unit/core/: test_ohlcv.py
python/tests/unit/data/: test_dump.py  test_load.py
python/tests/unit/expr/dsl/: test_base_quote_format.py  test_expression_aliases.py  test_indicator_expr_inputs.py
python/tests/unit/expr/execution/: test_backend_resolution.py  test_drift_guard.py  test_incremental_rust_execute_plan.py  test_runner.py
python/tests/unit/expr/normalize/: test_normalize.py
python/tests/unit/expr/planner/: test_planner_requirements.py  test_requirements_contract.py  test_rust_execution_payload.py
python/tests/unit/expr/runtime/: test_evaluator.py  test_preview.py  test_stream.py
python/tests/unit/expr/typecheck/: test_checker.py  test_typecheck.py
python/tests/unit/indicators/momentum/: test_adx.py  test_cci.py  test_mfi.py  test_roc.py  test_rsi.py  test_stochastic.py
python/tests/unit/indicators/pattern/: test_fib_retracement.py
python/tests/unit/indicators/trend/: test_ema.py  test_ichimoku.py  test_macd.py
python/tests/unit/indicators/volatility/: test_keltner.py
python/tests/unit/indicators/volume/: test_obv.py
python/tests/unit/registry/: test_metadata.py  test_registry.py  test_registry_models.py  test_schemas.py
python/tests/unit/runtime/: test_backend.py  test_contract_shapes.py
rust/crates/ta-ffi/: Cargo.toml  README.md
rust/crates/ta-ffi/src/: lib.rs
(+484 files in other folders)
