[workspace]
members = [
    "crates/ta-engine",
    "crates/ta-ffi",
    "crates/ta-py",
    "crates/ta-node",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Laakhay Corporation <laakhay.corp@gmail.com>"]
repository = "https://github.com/laakhay/ta"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
