[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "laakhay-ta"
version = "0.1.0b0"
description = "Rust-first Technical Analysis Library by Laakhay"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Laakhay Corporation", email = "laakhay.corp@gmail.com" }]
dependencies = []

[project.urls]
Homepage = "https://laakhay.com"
Repository = "https://github.com/laakhay/ta"
Issues = "https://github.com/laakhay/ta/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pyright>=1.1.406",
    "maturin>=1.7,<2.0",
]

[tool.maturin]
manifest-path = "../crates/ta-py/Cargo.toml"
module-name = "ta_py"
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src", "."]
addopts = [
  "--strict-markers",
  "--tb=short",
  "--import-mode=importlib"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B"]
ignore = [
    "C901",
    "E501",
    "UP006",
    "UP007",
    "UP035",
    "UP040",
    "UP045",
    "UP046",
    "B904",
    "E721",
    "E741",
    "F841",
    "F811",
    "B018",
]
