[package]
name = "ta-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Node bindings for ta-engine direct indicator calls"
repository = "https://github.com/laakhay/ta"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
ta-engine = { path = "../ta-engine" }

[build-dependencies]
napi-build = "2"
